# diffr

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  __init__.py  performance.md  profile_performance.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_diff.py
.github/workflows/: python-package.yml
diffr/: __init__.py  cli.py
diffr/algorithms/: base.py  myers.py  myers_cy.c  myers_cy.html  myers_cy.pyx  patience_cy.pyx
diffr/core/: __init__.py  myers.pyi  myers.pyx  myers_pure.py  patience.pyi  patience.pyx  patience_pure.py
diffr/data_models/: __init__.py  diff.py  diff_model.py
diffr/utils/: intra_line_differ.py
diffr/viewer/: diff_viewer.py
scripts/: benchmark_myers.py  benchmark_patience.py  test_diff.py  test_diff_viewer.py
scripts/sample_files/: diff_0_modified.tsx  diff_0_original.tsx
tests/: test_diff_line.py
