[project]
name = "diffr"
version = "0.0.1"
requires-python = ">=3.13.2"

dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "diagrams>=0.24.4",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "uv>=0.6.9",
]

[build-system]
requires = ["setuptools>=42", "wheel", "cython>=0.29"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["diffr"]
package-dir = {"" = "."}

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype",
    ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "venv", ".pytest_cache",
]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "D100", "D101", "D102", "D104", "D107", "D203", "D212", "D213", "D402", "D413", "D415",
    "D416", "D417", "E71", "E731",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
